<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_dashboard" />

    <item
        android:id="@+id/nav_pgs"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_pgs" />

    <item
        android:id="@+id/nav_rent"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_rent" />

    <item
        android:id="@+id/nav_tenants"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/nav_tenants" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings" />

</menu>
